# cv-composer

./: .gitmodules  CMakeLists.txt  Makefile  README.markdown  default.nix  opencv_config.nix
src/: canny.cpp  canny.hpp  convolution.cpp  convolution.hpp  main.cpp  two_pass.cpp  two_pass.hpp  util.hpp
vis/: Makefile  style.css  test.html  util.coffee  vis.coffee
vis/js/: util.js  util.js.map  util.min.js  util.min.js.map  vis.js  vis.js.map  vis.min.js  vis.min.js.map
